@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" display2d="yes" display3d="no" verbose="0" delays="true" tcptimeout="2000">
+<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" display2d="yes" display3d="no" verbose="5" delays="true" tcptimeout="2000">
   <delays blind_ante_position="0.5" position="2" begin_round="1" end_round="1" end_round_last="1" showdown="1" lag="15"/>
   <screen fullscreen="no" width="1024" height="768"/>
-  <name>dachary1</name>
+  <name>dachary5</name>
   <passwd>dachary1</passwd>
   <remember>yes</remember>
   <muck>yes</muck>
@@ -11,7 +11,7 @@
   <servers>localhost:19480 localhost:19481;ssl localhost:19378 game1-test:19380</servers>
   <web browser="/usr/bin/firefox">http://www.pok3d.com/</web>
   <sound>yes</sound>
-  <tournaments custom_money="n" type="sit_n_go" sort="name"/>
+  <tournaments custom_money="n" type="regular" sort="name"/>
   <lobby custom_money="" type="holdem" sort="name"/>
   <shadow>yes</shadow>
   <vprogram>yes</vprogram>
