@@ -5,6 +5,8 @@ Server can be made to listen on SSL or regular TCP ports.
 XML-RPC and SOAP support, either with cookie based sessions
 or stateless.
 
+Authentication related bug fixes.
+
 Server and client SSL support.
 
 Release 1.0.1
